# tuiJungle

./: .gitignore  CMakeLists.txt  LICENSE  README.md
docs/: design.md  development.md  docs-dev.md
src/lib/: album.h  artist.h  playlist.h  queue.cpp  queue.h  song.cpp  song.h
src/lib/muslib/: album.cpp  album.h  artist.cpp  playlist.cpp  playlist.h  queue.cpp  song.cpp  song.h
src/lib/struct/: album.cpp  aritst.cpp  playlist.cpp  song.cpp
src/root/: main.cpp  makefile
src/tests/: album.test.cpp  song.test.cpp  test.cpp  ui.test.cpp
